fixing scrollbar on applications menu

--- a/app/client/src/assets/styles/index.css
+++ b/app/client/src/assets/styles/index.css
@@ -27,7 +27,7 @@ html {
 
 * {
   scrollbar-width: thin;
-  scrollbar-color: var(--ads-v2-color-bg-emphasis) transparent;
+  scrollbar-color: var(--ads-v2-color-bg-emphasis) var(--ads-v2-color-bg);
 }
 
 /* For some reason, margin-left: -160px; is being added to the react-toastify stylesheet on the .Toastify__toast-container--top-center
@@ -43,7 +43,7 @@ and .Toastify__toast-container--bottom-center classes, which messes with the pla
 }
 
 ::-webkit-scrollbar-track {
-  background-color: transparent;
+  background-color: var(--ads-v2-color-bg);
 }
 
 ::-webkit-scrollbar-thumb {
